--- a/components/header.html
+++ b/components/header.html
@@ -33,11 +33,11 @@
        <h3 class="pb-2">Essential components</h3>
        <p>These components are always included in an email:</p>
        <div class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-4">
-        <a href="">
+        <a href="/components/header/header-logobar.html">
          <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
           <h4 class="pb-2">Logo bar</h4>
           <p class="text-sm mb-2">Contains the logo and slogan of Coolblue.</p>
-          <p class="text-sm text-gray-500 pb-2">Variations: 3 | Last updated: -</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 3 | Last updated: June 18, 2020</p>
           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
           <div class="mt-4">
            <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
@@ -50,11 +50,11 @@
        <h3 class="pb-2">Optional components</h3>
        <p>These components can be used in emails, but are not necessary:</p>
        <div class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-4">
-        <a href="">
+        <a href="/components/header/header-preheader.html">
          <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
           <h4 class="pb-2">Pre-header menu</h4>
           <p class="text-sm mb-2">Contains several links that can be used to guide users to the website, or give them more options in the email.</p>
-          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: October 21, 2019</p>
           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
           <div class="mt-4">
            <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
@@ -75,7 +75,7 @@
         <a href="">
          <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
           <h4 class="pb-2">Notification bar</h4>
-          <p class="text-sm mb-2">Gives the option to put a notification like a warning or promotion at the top of the email.<br>&nbsp;</p>
+          <p class="text-sm mb-2">Gives the option to put a notification like a warning or promotion at the top of the email.<span class="md:block xl:hidden">&nbsp;</span></p>
           <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
           <span class="bg-red-coolblue py-1 px-2 text-sm rounded text-white bold label">Not in use</span>
           <div class="mt-4">
