--- a/style/style.css
+++ b/style/style.css
@@ -23,5 +23,5 @@ span.label {font-family: 'DobraSlabMedium','Open Sans',Arial,Helvetica,Verdana,s
 /* Embed styling */
 .embed-desktop {width: 700px;}
 .embed-mobile {width: 360px;}
-iframe {width: 100%; border: none;}
+iframe {width: 100%; height: 100%; border: none;}
 iframe.large {height: 600px}
