Updated code for header components

--- a/components/header.html
+++ b/components/header.html
@@ -61,22 +61,22 @@
           </div>
          </div>
         </a>
-        <a href="">
+        <a href="/components/header/header-uspbar.html">
          <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
           <h4 class="pb-2">USP bar</h4>
-          <p class="text-sm mb-2">Contains multiple items containing unique selling points of Coolblue. Mostly used in promotional and marketing emails.</p>
-          <p class="text-sm text-gray-500 pb-2">Variations: 3 | Last updated: -</p>
+          <p class="text-sm mb-2">Contains multiple items containing unique selling points of Coolblue. Mostly used in promo and marketing emails.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 3 | Last updated: May 25, 2020</p>
           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
           <div class="mt-4">
            <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
           </div>
          </div>
         </a>
-        <a href="">
+        <a href="/components/header/header-notificationbar.html">
          <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
           <h4 class="pb-2">Notification bar</h4>
           <p class="text-sm mb-2">Gives the option to put a notification like a warning or promotion at the top of the email.<span class="md:block xl:hidden">&nbsp;</span></p>
-          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: October 21, 2019</p>
           <span class="bg-red-coolblue py-1 px-2 text-sm rounded text-white bold label">Not in use</span>
           <div class="mt-4">
            <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
