--- a/components/frameworks.html
+++ b/components/frameworks.html
@@ -29,43 +29,221 @@
         Frameworks are used to create new emails quickly and easily, without needing to reinvent the wheel every time you need a new design.
        </p>
       </div>
-      <div class="py-8">
-       <h3 class="pb-2">Frameworks</h3>
-       <p>Our frameworks have been split into three types: head frameworks, body frameworks and element frameworks.</p>
-       <div class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-4">
-        <a href="">
-         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
-          <h4 class="pb-2">Head frameworks</h4>
-          <p class="text-sm mb-2">Frameworks containing the head and CSS of an email.</p>
-          <p class="text-sm text-gray-500 pb-2">Variations: 3 | Last updated: -</p>
-          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
-          <div class="mt-4">
-           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
-          </div>
+      <div>
+       <h4 class="mt-4">
+        Basic email framework - Regular
+       </h4>
+       <div class="mt-2 mb-8 border rounded divide-y">
+        <div class="p-2 flex">
+         <div class="w-1/4 items-center flex">
+          <p class="font-bold text-sm">
+           Status
+          </p>
          </div>
-        </a>
-        <a href="">
-         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
-          <h4 class="pb-2">Body frameworks</h4>
-          <p class="text-sm mb-2">Frameworks containing the code for the body of an email.</p>
-          <p class="text-sm text-gray-500 pb-2">Variations: 2 | Last updated: -</p>
-          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
-          <div class="mt-4">
-           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
-          </div>
+         <div class="w-3/4 items-center flex">
+          <p class="text-sm">
+           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          </p>
          </div>
-        </a>
-        <a href="">
-         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
-          <h4 class="pb-2">Element frameworks</h4>
-          <p class="text-sm mb-2">Frameworks used to build new elements.</p>
-          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
-          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
-          <div class="mt-4">
-           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
-          </div>
+        </div>
+        <div class="p-2 flex">
+         <div class="w-1/4 items-center flex">
+          <p class="font-bold text-sm">
+           Last update
+          </p>
          </div>
-        </a>
+         <div class="w-3/4 items-center flex">
+          <p class="text-sm">
+           October 21, 2019
+          </p>
+         </div>
+        </div>
+        <div class="p-2 flex">
+         <div class="w-1/4 items-center flex">
+          <p class="font-bold text-sm">
+           GitHub
+          </p>
+         </div>
+         <div class="w-3/4 items-center flex">
+          <p class="text-sm">
+           <a href="https://github.com/coolblue-development/email-development/blob/master/snippets/00_frameworks/fw-body-regular.html" class="hover:underline text-blue-coolblue">Link</a>
+          </p>
+         </div>
+        </div>      
+       </div>
+      </div>
+      <div>
+       <h4 class="mt-4">
+        Basic email framework - Selligent
+       </h4>
+       <div class="mt-2 mb-8 border rounded divide-y">
+        <div class="p-2 flex">
+         <div class="w-1/4 items-center flex">
+          <p class="font-bold text-sm">
+           Status
+          </p>
+         </div>
+         <div class="w-3/4 items-center flex">
+          <p class="text-sm">
+           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          </p>
+         </div>
+        </div>
+        <div class="p-2 flex">
+         <div class="w-1/4 items-center flex">
+          <p class="font-bold text-sm">
+           Last update
+          </p>
+         </div>
+         <div class="w-3/4 items-center flex">
+          <p class="text-sm">
+           October 21, 2019
+          </p>
+         </div>
+        </div>
+        <div class="p-2 flex">
+         <div class="w-1/4 items-center flex">
+          <p class="font-bold text-sm">
+           GitHub
+          </p>
+         </div>
+         <div class="w-3/4 items-center flex">
+          <p class="text-sm">
+           <a href="https://github.com/coolblue-development/email-development/blob/master/snippets/00_frameworks/fw-body-selligent.html" class="hover:underline text-blue-coolblue">Link</a>
+          </p>
+         </div>
+        </div>      
+       </div>
+      </div>
+      <div>
+       <h4 class="mt-4">
+        CSS framework
+       </h4>
+       <div class="mt-2 mb-8 border rounded divide-y">
+        <div class="p-2 flex">
+         <div class="w-1/4 items-center flex">
+          <p class="font-bold text-sm">
+           Status
+          </p>
+         </div>
+         <div class="w-3/4 items-center flex">
+          <p class="text-sm">
+           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          </p>
+         </div>
+        </div>
+        <div class="p-2 flex">
+         <div class="w-1/4 items-center flex">
+          <p class="font-bold text-sm">
+           Last update
+          </p>
+         </div>
+         <div class="w-3/4 items-center flex">
+          <p class="text-sm">
+           April 15, 2020
+          </p>
+         </div>
+        </div>
+        <div class="p-2 flex">
+         <div class="w-1/4 items-center flex">
+          <p class="font-bold text-sm">
+           GitHub
+          </p>
+         </div>
+         <div class="w-3/4 items-center flex">
+          <p class="text-sm">
+           <a href="https://github.com/coolblue-development/email-development/blob/master/snippets/00_frameworks/fw-css.css" class="hover:underline text-blue-coolblue">Link</a>
+          </p>
+         </div>
+        </div>      
+       </div>
+      </div>
+
+      <div>
+       <h4 class="mt-4">
+        Basic component framework
+       </h4>
+       <div class="mt-2 mb-8 border rounded divide-y">
+        <div class="p-2 flex">
+         <div class="w-1/4 items-center flex">
+          <p class="font-bold text-sm">
+           Status
+          </p>
+         </div>
+         <div class="w-3/4 items-center flex">
+          <p class="text-sm">
+           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          </p>
+         </div>
+        </div>
+        <div class="p-2 flex">
+         <div class="w-1/4 items-center flex">
+          <p class="font-bold text-sm">
+           Last update
+          </p>
+         </div>
+         <div class="w-3/4 items-center flex">
+          <p class="text-sm">
+           October 21, 2019
+          </p>
+         </div>
+        </div>
+        <div class="p-2 flex">
+         <div class="w-1/4 items-center flex">
+          <p class="font-bold text-sm">
+           GitHub
+          </p>
+         </div>
+         <div class="w-3/4 items-center flex">
+          <p class="text-sm">
+           <a href="https://github.com/coolblue-development/email-development/blob/master/snippets/00_frameworks/fw-template-baseelement.html" class="hover:underline text-blue-coolblue">Link</a>
+          </p>
+         </div>
+        </div>      
+       </div>
+      </div>
+
+      <div>
+       <h4 class="mt-4">
+        Basic Selligent framework
+       </h4>
+       <div class="mt-2 mb-8 border rounded divide-y">
+        <div class="p-2 flex">
+         <div class="w-1/4 items-center flex">
+          <p class="font-bold text-sm">
+           Status
+          </p>
+         </div>
+         <div class="w-3/4 items-center flex">
+          <p class="text-sm">
+           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          </p>
+         </div>
+        </div>
+        <div class="p-2 flex">
+         <div class="w-1/4 items-center flex">
+          <p class="font-bold text-sm">
+           Last update
+          </p>
+         </div>
+         <div class="w-3/4 items-center flex">
+          <p class="text-sm">
+           June 9, 2020
+          </p>
+         </div>
+        </div>
+        <div class="p-2 flex">
+         <div class="w-1/4 items-center flex">
+          <p class="font-bold text-sm">
+           GitHub
+          </p>
+         </div>
+         <div class="w-3/4 items-center flex">
+          <p class="text-sm">
+           <a href="https://github.com/coolblue-development/email-development/blob/master/snippets/00_frameworks/fw-template-selligent-basicmail.html" class="hover:underline text-blue-coolblue">Link</a>
+          </p>
+         </div>
+        </div>      
        </div>
       </div>
      </div>
