--- a/components/body/body-introductions.html
+++ b/components/body/body-introductions.html
@@ -23,13 +23,13 @@
      <div class="my-4 mx-4 xl:mx-8">
       <div>
        <h2 class="text-blue-darkblue text-4xl -mt-2">
-        Weekly newsletter<span class="text-orange-coolblue">.</span>
+        Introductions<span class="text-orange-coolblue">.</span>
        </h2>
-       <p>Our weekly newsletter reaches up to 2 million people each week, spread across The Netherlands and Belgium. The content of this mail is a combination of promotions, advice and Coolblue branded items.</p>
+       <p>The start for many email, introducing the subject of the email to the receiver. Variants range from simple text blocks to options with an image and button.</p>
        <h3 class="mt-4">
         General information
        </h3>
-       <div class="mt-2 border rounded divide-y">
+       <div class="mt-2 mb-8 border rounded divide-y">
         <div class="p-2 flex">
          <div class="w-1/4 items-center flex">
           <p class="font-bold text-sm">
@@ -45,55 +45,140 @@
         <div class="p-2 flex">
          <div class="w-1/4 items-center flex">
           <p class="font-bold text-sm">
-           Cadence
+           Last update
           </p>
          </div>
          <div class="w-3/4 items-center flex">
           <p class="text-sm">
-           Weekly recurring
+           June 24, 2020
           </p>
          </div>
         </div>
         <div class="p-2 flex">
          <div class="w-1/4 items-center flex">
           <p class="font-bold text-sm">
-           Reach
+           Variants
           </p>
          </div>
          <div class="w-3/4 items-center flex">
           <p class="text-sm">
-           2 million users
+           Salutations | + Text | + Text + Image | + Text + Button + Image
           </p>
          </div>
         </div>
         <div class="p-2 flex">
          <div class="w-1/4 items-center flex">
           <p class="font-bold text-sm">
-           Owner
+           GitHub
           </p>
          </div>
          <div class="w-3/4 items-center flex">
           <p class="text-sm">
-           Leonie de Kovel
+           <a href="https://github.com/coolblue-development/email-development/tree/master/snippets/02_content/01_introductions" class="hover:underline text-blue-coolblue">Link</a>
           </p>
          </div>
         </div>
-        
        </div>
-       <h3 class="mt-4">
+       <h3 class="mt-4 border-b pb-2">
         Preview
        </h3>
-       <div class="flex mt-2">
-        <div class="embed-desktop border rounded inline-block">
-         <iframe src="/examples/example_prospecting_newsletter_nlnl.html" class="large"></iframe>
-        </div>
-        <div class="embed-mobile lg:ml-4 border rounded inline-block">
-         <iframe src="/examples/example_prospecting_newsletter_nlnl.html" class="large"></iframe>
-        </div>
+       <!--Salutations-->
+       <h4 class="mt-4">
+        Salutations
+       </h4>
+       <div class="mt-2 flex">
+        <div class="flex">
+         <div class="embed-desktop email-code border rounded py-4">
+          <table width="100%">
+           <tr>
+            <td align="center">
+             <table role="presentation" width="640" class="width_100p">
+              <tr>
+               <td width="16">&nbsp;</td>
+               <td width="608" align="center" valign="top">
+                <table role="presentation" width="100%">
+                 <tr>
+                  <th width="100%" class="width_100p block" style="text-align: left; vertical-align: top">
+                   <table role="presentation" width="100%">
+                    <tr>
+                     <td style="padding: 24px 0px 24px 0px">
+                      <p style="font-weight: bold;">Hoi Pieter,</p>
+                     </td>
+                    </tr>
+                   </table>
+                  </th>
+                 </tr>
+                </table>
+               </td>
+               <td width="16">&nbsp;</td>
+              </tr>
+             </table>
+            </td>
+           </tr>
+          </table>
+         </div>
+        </div>    
        </div>
-       <h3 class="mt-4">
-        H3 - Element
-       </h3>
+       <!--+ Text-->
+       <h4 class="mt-4">
+        + Text
+       </h4>
+       <div class="mt-2 flex">
+        <div class="flex">
+         <div class="embed-desktop email-code border rounded py-4">
+          <table width="100%">
+           <tr>
+            <td align="center">
+             <table role="presentation" width="640" class="width_100p">
+              <tr>
+               <td width="16">&nbsp;</td>
+               <td width="608" align="center" valign="top">
+                <table role="presentation" width="100%" class="border-bottom_grey">
+                 <tr>
+                  <th width="100%" class="width_100p block" style="text-align: left; vertical-align: top">
+                   <table role="presentation" width="100%">
+                    <tr>
+                     <td style="padding: 24px 0px 8px 0px">
+                      <p style="font-weight: bold;">Hoi Pieter,</p>
+                     </td>
+                    </tr>
+                    <tr>
+                     <td style="padding: 0px 0px 24px 0px;">
+                      <p class="output" data-target="element_introductions_v1_area1">Intro</p>
+                     </td>
+                    </tr>
+                   </table>
+                  </th>
+                 </tr>
+                </table>
+               </td>
+               <td width="16">&nbsp;</td>
+              </tr>
+             </table>
+            </td>
+           </tr>
+          </table>
+         </div>
+        </div>
+        <div class="ml-4 w-2/6">
+         <div class="flex mb-2">
+          <div class="w-1/6 flex">
+           <label>
+            <h5>
+             Intro
+            </h5>
+           </label>
+          </div>
+          <div class="w-5/6 flex items-center">
+           <textarea data-for="element_introductions_v1_area1" class="text-sm border rounded-sm px-4 py-1 w-full input" placeholder="Enter some text" rows="5"></textarea>
+          </div>
+         </div>
+        </div>      
+       </div>
+       <!--+ Text + Image-->
+       <h4 class="mt-4">
+        + Text + Image
+       </h4>
        <div class="mt-2 flex">
         <div class="flex">
          <div class="embed-desktop email-code border rounded py-4">
@@ -110,36 +195,12 @@
                    <table role="presentation" width="100%">
                     <tr>
                      <td style="padding: 24px 0px 8px 0px">
-                      <p style="font-weight: bold;">Hoi [naam],</p>
+                      <p style="font-weight: bold;">Hoi Pieter,</p>
                      </td>
                     </tr>
                     <tr>
                      <td style="padding: 0px 0px 16px 0px;">
-                      <p class="output">Intro - 40 characters</p>
-                     </td>
-                    </tr>
-                    <tr>
-                     <td style="padding: 0px 0px 16px 0px" align="left">
-                      <table role="presentation" style="border-collapse: separate" class="width_100p button">
-                       <tr>
-                        <td class="button_darkblue button width_100p">
-                         <a href="#" class="link_white">
-                          <!--[if (gte mso 9)|(IE)]>&nbsp;&nbsp;<![endif]-->
-                           <span style="vertical-align: top; mso-text-raise: 2px" class="output">
-                            Text button - 20 characters
-                           </span>
-                          <!--[if (gte mso 9)|(IE)]>&nbsp;&nbsp;<![endif]-->
-                         </a>
-                        </td>
-                       </tr>
-                      </table>
-                     </td>
-                    </tr>
-                    <tr>
-                     <td style="padding: 0px 0px 24px 0px;">
-                      <p>
-                       <p class="output">Outro - 40 characters</p>
-                      </p>
+                      <p class="output" data-target="element_introductions_v2_area1">Intro</p>
                      </td>
                     </tr>
                    </table>
@@ -152,7 +213,7 @@
                     <tr>
                      <td>
                       <a href="#">
-                       <img id="element_introductions_v1_image_output" src="/img/specialist_regular.jpg" width="192" height="auto" style="vertical-align: bottom" alt="Image" role="presentation">
+                       <img id="element_introductions_v2_image_output" src="/img/specialist_regular.jpg" width="192" height="auto" style="vertical-align: bottom" alt="Image" role="presentation">
                       </a>
                      </td>
                     </tr>
@@ -172,47 +233,157 @@
         <div class="ml-4 w-2/6">
          <div class="flex mb-2">
           <div class="w-1/6 flex">
-           <label for="element_introductions_v1_area1">
-            <h4>
+           <label>
+            <h5>
              Intro
-            </h4>
+            </h5>
            </label>
           </div>
           <div class="w-5/6 flex items-center">
-           <textarea id="element_introductions_v1_area1" name="element_introductions_v1_area1" class="text-sm border rounded-sm px-4 py-1 w-full input" placeholder="Enter some text - Max 200 characters" maxlength="200"></textarea>
+           <textarea data-for="element_introductions_v2_area1" class="text-sm border rounded-sm px-4 py-1 w-full input" placeholder="Enter some text" rows="5"></textarea>
           </div>
          </div>
          <div class="flex mb-2">
           <div class="w-1/6 flex items-center">
-           <h4>
-            Button
-           </h4>
+           <label">
+           <h5>
+            Image
+           </h5>
+          </label>
           </div>
           <div class="w-5/6 flex items-center">
-           <input placeholder="Enter some text" id="element_introductions_v1_button" name="element_introductions_v1_button" class="text-sm border rounded-sm px-4 py-1 w-full input"/>
+           <input type="file" accept="image/gif, image/jpeg, image/png" name="image" id="element_introductions_v2_image" onchange="loadFile_2(event)" style="display: none">
+           <label for="element_introductions_v2_image" class="bg-coolblue text-white text-xs rounded py-2 px-4">
+            Upload image
+           </label>
+           <span class=" text-xs text-gray-700 italic ml-4">Dimensions: 384 pixels wide</span>
+          </div>
+         </div>
+        </div>      
+       </div>
+       <!--+ Text + Button + Image-->
+       <h4 class="mt-4">
+        + Text + Button + Image
+       </h4>
+       <div class="mt-2 flex">
+        <div class="flex">
+         <div class="embed-desktop email-code border rounded py-4">
+          <table width="100%">
+           <tr>
+            <td align="center">
+             <table role="presentation" width="640" class="width_100p">
+              <tr>
+               <td width="16">&nbsp;</td>
+               <td width="608" align="center" valign="top">
+                <table role="presentation" width="100%" class="border-bottom_grey">
+                 <tr>
+                  <th width="400" class="width_100p block" style="text-align: left; vertical-align: top">
+                   <table role="presentation" width="100%">
+                    <tr>
+                     <td style="padding: 24px 0px 8px 0px">
+                      <p style="font-weight: bold;">Hoi Pieter,</p>
+                     </td>
+                    </tr>
+                    <tr>
+                     <td style="padding: 0px 0px 16px 0px;">
+                      <p class="output" data-target="element_introductions_v3_area1">Intro - Max. 200 characters</p>
+                     </td>
+                    </tr>
+                    <tr>
+                     <td style="padding: 0px 0px 16px 0px" align="left">
+                      <table role="presentation" style="border-collapse: separate" class="width_100p button">
+                       <tr>
+                        <td class="button_darkblue button width_100p">
+                         <a href="#" class="link_white">
+                          <!--[if (gte mso 9)|(IE)]>&nbsp;&nbsp;<![endif]-->
+                           <span style="vertical-align: top; mso-text-raise: 2px" class="output" data-target="element_introductions_v3_button">
+                            Text button - 20 characters
+                           </span>
+                          <!--[if (gte mso 9)|(IE)]>&nbsp;&nbsp;<![endif]-->
+                         </a>
+                        </td>
+                       </tr>
+                      </table>
+                     </td>
+                    </tr>
+                    <tr>
+                     <td style="padding: 0px 0px 24px 0px;">
+                      <p>
+                       <p class="output" data-target="element_introductions_v3_area2">Outro - Max. 200 characters</p>
+                      </p>
+                     </td>
+                    </tr>
+                   </table>
+                  </th>
+                  <th width="16" class="hide">
+                   &nbsp;
+                  </th>
+                  <th width="192" class="width_100p" style="vertical-align: bottom">
+                   <table role="presentation" width="100%">
+                    <tr>
+                     <td>
+                      <a href="#">
+                       <img id="element_introductions_v3_image_output" src="/img/specialist_regular.jpg" width="192" height="auto" style="vertical-align: bottom" alt="Image" role="presentation">
+                      </a>
+                     </td>
+                    </tr>
+                   </table>
+                  </th>
+                 </tr>
+                </table>
+               </td>
+               <td width="16">&nbsp;</td>
+              </tr>
+             </table>
+            </td>
+           </tr>
+          </table>
+         </div>
+        </div>
+        <div class="ml-4 w-2/6">
+         <div class="flex mb-2">
+          <div class="w-1/6 flex">
+           <label>
+            <h5>
+             Intro
+            </h5>
+           </label>
+          </div>
+          <div class="w-5/6 flex items-center">
+           <textarea data-for="element_introductions_v3_area1" class="text-sm border rounded-sm px-4 py-1 w-full input" placeholder="Enter some text - Max 200 characters" maxlength="200"></textarea>
+          </div>
+         </div>
+         <div class="flex mb-2">
+          <div class="w-1/6 flex items-center">
+           <h5>
+            Button
+           </h5>
+          </div>
+          <div class="w-5/6 flex items-center">
+           <input placeholder="Enter some text" data-for="element_introductions_v3_button" class="text-sm border rounded-sm px-4 py-1 w-full input"/>
           </div>
          </div>
          <div class="flex mb-2">
           <div class="w-1/6 flex">
-           <h4>
+           <h5>
             Outro
-           </h4>
+           </h5>
           </div>
           <div class="w-5/6 flex items-center">
-           <textarea id="element_introductions_v1_area2" name="element_introductions_v1_area2" class="text-sm border rounded-sm px-4 py-1 w-full input" placeholder="Enter some text"></textarea>
+           <textarea data-for="element_introductions_v3_area2" class="text-sm border rounded-sm px-4 py-1 w-full input" placeholder="Enter some text - Max 200 characters" maxlength="200"></textarea>
           </div>
          </div>
          <div class="flex mb-2">
           <div class="w-1/6 flex items-center">
-           <label for="element_introductions_v1_image">
-           <h4>
+           <label>
+           <h5>
             Image
-           </h4>
+           </h5>
           </label>
           </div>
           <div class="w-5/6 flex items-center">
-           <input type="file" accept="image/gif, image/jpeg, image/png" name="image" id="element_introductions_v1_image" onchange="loadFile(event)" style="display: none">
-           <label for="element_introductions_v1_image" class="bg-coolblue text-white text-xs rounded py-2 px-4">
+           <input type="file" accept="image/gif, image/jpeg, image/png" name="image" id="element_introductions_v3_image" onchange="loadFile_3(event)" style="display: none">
+           <label for="element_introductions_v3_image" class="bg-coolblue text-white text-xs rounded py-2 px-4">
             Upload image
            </label>
            <span class=" text-xs text-gray-700 italic ml-4">Dimensions: 384 pixels wide</span>
