--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,7 @@
 * {font-family: 'Open Sans',Arial,Helvetica,Verdana,sans-serif;}
 h1, h2, h3, h4 {font-family: 'AvenirBlack',Arial,Helvetica,Verdana,sans-serif;}
 h1, h2, h3 {text-transform: uppercase;}
+h5 {font-size: 13px; font-style: italic;}
 span.label {font-family: 'DobraSlabMedium','Open Sans',Arial,Helvetica,Verdana,sans-serif; text-transform: lowercase; letter-spacing: 1.2px; -webkit-font-smoothing: antialiased;}
 
 /*div {border: 1px solid #dddddd}*/
