--- a/components/body.html
+++ b/components/body.html
@@ -37,7 +37,7 @@
        <h3 class="pb-2">Optional components</h3>
        <p>These components can be used in emails, but are not necessary:</p>
        <div class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-4">
-        <a href="">
+        <a href="/components/body/body-introductions.html">
          <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center h-full">
           <h4 class="pb-2">Introductions</h4>
           <p class="text-sm mb-2">Often used to open an email, containing the salutations and some general text.</p>
