--- a/components/header.html
+++ b/components/header.html
@@ -11,6 +11,9 @@
   <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
 
   <script src="https://kit.fontawesome.com/1332795812.js" crossorigin="anonymous"></script>
+  <script defer src="https://pro.fontawesome.com/releases/v5.13.1/js/all.js" integrity="sha384-RFburpZVVirucdjarLLIoBiT+LY5YuPB8XboZYWRuWpElr46csH7Ia2nsHfkfBZF" crossorigin="anonymous"></script>
+
+
  </head>
  <body class="w-full">
   <div class="grid xl:grid-cols-12 gap-0 xl:h-screen">
