--- a/components/body.html
+++ b/components/body.html
@@ -85,7 +85,7 @@
           </div>
          </div>
         </a>
-        <a href="">
+        <a href="/components/body/body-blog.html">
          <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center h-full">
           <h4 class="pb-2">Blog</h4>
           <p class="text-sm mb-2">A component used to show a blog or advice article on the website.</p>
