--- a/components/body/body-introductions.html
+++ b/components/body/body-introductions.html
@@ -215,7 +215,7 @@
                     <tr>
                      <td>
                       <a href="#">
-                       <img id="element_introductions_v2_image_output" src="/img/specialist_regular.jpg" width="192" height="auto" style="vertical-align: bottom" alt="Image" role="presentation">
+                       <img id="element_image_output_1" src="/img/specialist_regular.jpg" width="192" height="auto" style="vertical-align: bottom" alt="Image" role="presentation">
                       </a>
                      </td>
                     </tr>
@@ -243,22 +243,6 @@
           </div>
           <div class="w-5/6 flex items-center">
            <textarea data-for="element_introductions_v2_area1" class="text-sm border rounded-sm px-4 py-1 w-full input" placeholder="Enter some text" rows="5"></textarea>
-          </div>
-         </div>
-         <div class="flex mb-2">
-          <div class="w-1/6 flex items-center">
-           <label">
-           <h5>
-            Image
-           </h5>
-          </label>
-          </div>
-          <div class="w-5/6 flex items-center">
-           <input type="file" accept="image/gif, image/jpeg, image/png" name="image" id="element_introductions_v2_image" onchange="loadFile_2(event)" style="display: none">
-           <label for="element_introductions_v2_image" class="bg-coolblue text-white text-xs rounded py-2 px-4">
-            Upload image
-           </label>
-           <span class=" text-xs text-gray-700 italic ml-4">Dimensions: 384 pixels wide</span>
           </div>
          </div>
         </div>      
@@ -325,7 +309,7 @@
                     <tr>
                      <td>
                       <a href="#">
-                       <img id="element_introductions_v3_image_output" src="/img/specialist_regular.jpg" width="192" height="auto" style="vertical-align: bottom" alt="Image" role="presentation">
+                       <img id="element_image_output_2" src="/img/specialist_regular.jpg" width="192" height="auto" style="vertical-align: bottom" alt="Image" role="presentation">
                       </a>
                      </td>
                     </tr>
@@ -373,23 +357,7 @@
           </div>
           <div class="w-5/6 flex items-center">
            <textarea data-for="element_introductions_v3_area2" class="text-sm border rounded-sm px-4 py-1 w-full input" placeholder="Enter some text - Max 200 characters" maxlength="200"></textarea>
-          </div>
-         </div>
-         <div class="flex mb-2">
-          <div class="w-1/6 flex items-center">
-           <label>
-           <h5>
-            Image
-           </h5>
-          </label>
-          </div>
-          <div class="w-5/6 flex items-center">
-           <input type="file" accept="image/gif, image/jpeg, image/png" name="image" id="element_introductions_v3_image" onchange="loadFile_3(event)" style="display: none">
-           <label for="element_introductions_v3_image" class="bg-coolblue text-white text-xs rounded py-2 px-4">
-            Upload image
-           </label>
-           <span class=" text-xs text-gray-700 italic ml-4">Dimensions: 384 pixels wide</span>
-          </div>
+          </div>        
          </div>
         </div>      
        </div>
