--- a/components/body.html
+++ b/components/body.html
@@ -74,11 +74,11 @@
          </div>
         </a>
 
-        <a href="">
+        <a href="/components/body/body-productpositions.html">
          <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center h-full">
           <h4 class="pb-2">Product positions</h4>
           <p class="text-sm mb-2">A component containing a single or multiple products positioned next to each other.</p>
-          <p class="text-sm text-gray-500 pb-2">Variations: 2 | Last updated: -</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 2 | Last updated: July 16, 2020</p>
           <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
           <div class="mt-4">
            <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
