--- a/components/body/body-introductions.html
+++ b/components/body/body-introductions.html
@@ -146,7 +146,7 @@
                     </tr>
                     <tr>
                      <td style="padding: 0px 0px 24px 0px;">
-                      <p class="output" data-target="element_introductions_v1_area1">Intro</p>
+                      <p class="output whitespace-pre-wrap" data-target="element_introductions_v1_area1">Intro</p>
                      </td>
                     </tr>
                    </table>
@@ -202,7 +202,7 @@
                     </tr>
                     <tr>
                      <td style="padding: 0px 0px 16px 0px;">
-                      <p class="output" data-target="element_introductions_v2_area1">Intro</p>
+                      <p class="output whitespace-pre-wrap" data-target="element_introductions_v2_area1">Intro</p>
                      </td>
                     </tr>
                    </table>
@@ -272,7 +272,7 @@
                     </tr>
                     <tr>
                      <td style="padding: 0px 0px 16px 0px;">
-                      <p class="output" data-target="element_introductions_v3_area1">Intro - Max. 200 characters</p>
+                      <p class="output whitespace-pre-wrap" data-target="element_introductions_v3_area1">Intro - Max. 200 characters</p>
                      </td>
                     </tr>
                     <tr>
@@ -295,7 +295,7 @@
                     <tr>
                      <td style="padding: 0px 0px 24px 0px;">
                       <p>
-                       <p class="output" data-target="element_introductions_v3_area2">Outro - Max. 200 characters</p>
+                       <p class="output whitespace-pre-wrap" data-target="element_introductions_v3_area2">Outro - Max. 200 characters</p>
                       </p>
                      </td>
                     </tr>
