Updated pages with image upload.

--- a/components/body/body-blog.html
+++ b/components/body/body-blog.html
@@ -111,7 +111,7 @@
                           <tr>
                            <td align="center">
                             <a href="#">
-                             <img src="https://mail.coolblue.eu/images/2020/Week-27/Newsletter/NLNL/Video.jpg" width="240" height="auto" style="height: auto; border-radius: 3px;" alt="Image" class="width_100p" role="presentation" id="element_image_output_1">
+                             <img src="https://mail.coolblue.eu/images/2020/Week-27/Newsletter/NLNL/Video.jpg" width="240" height="auto" style="height: auto; border-radius: 3px;" alt="Image" class="width_100p output" role="presentation" data-target="element_blog_v1_image">
                             </a>
                            </td>
                           </tr>
@@ -199,7 +199,7 @@
          <div class="flex mb-2">
           <div class="w-1/6 flex items-center">
            <h5>
-            Paragraph
+            Text
            </h5>
           </div>
           <div class="w-5/6 flex items-center">
@@ -214,6 +214,20 @@
           </div>
           <div class="w-5/6 flex items-center">
            <input placeholder="Enter some text" data-for="element_blog_v1_cta" class="text-sm border rounded-sm px-4 py-1 w-full input"/>
+          </div>
+         </div>
+         <div class="flex mb-2">
+          <div class="w-1/6 flex items-center">
+           <h5>
+            Image
+           </h5>
+          </div>
+          <div class="w-5/6 flex items-center">
+           <input type="file" data-for="element_blog_v1_image" id="element_blog_v1_image" class="input" accept="image/gif, image/jpeg, image/png" name="image" style="display: none;">
+           <label for="element_blog_v1_image" class="bg-coolblue text-white text-xs rounded py-2 px-4">
+            Upload image
+           </label>
+           <span class=" text-xs text-gray-700 italic ml-4">Dimensions: 240 pixels wide</span>
           </div>
          </div>
         </div>      
@@ -294,7 +308,7 @@
                           <tr>
                            <td align="center">
                             <a href="#">
-                             <img src="https://mail.coolblue.eu/images/2020/Week-27/Newsletter/NLNL/Video.jpg" width="240" height="auto" style="height: auto; border-radius: 3px;" alt="Image" class="width_100p" role="presentation" id="element_image_output_2">
+                             <img src="https://mail.coolblue.eu/images/2020/Week-27/Newsletter/NLNL/Video.jpg" width="240" height="auto" style="height: auto; border-radius: 3px;" alt="Image" class="width_100p output" role="presentation" data-target="element_blog_v2_image">
                             </a>
                            </td>
                           </tr>
@@ -333,7 +347,7 @@
          <div class="flex mb-2">
           <div class="w-1/6 flex items-center">
            <h5>
-            Paragraph
+            Text
            </h5>
           </div>
           <div class="w-5/6 flex items-center">
@@ -348,6 +362,20 @@
           </div>
           <div class="w-5/6 flex items-center">
            <input placeholder="Enter some text" data-for="element_blog_v2_cta" class="text-sm border rounded-sm px-4 py-1 w-full input"/>
+          </div>
+         </div>
+         <div class="flex mb-2">
+          <div class="w-1/6 flex items-center">
+           <h5>
+            Image
+           </h5>
+          </div>
+          <div class="w-5/6 flex items-center">
+           <input type="file" data-for="element_blog_v2_image" id="element_blog_v2_image" class="input" accept="image/gif, image/jpeg, image/png" name="image" style="display: none;">
+           <label for="element_blog_v2_image" class="bg-coolblue text-white text-xs rounded py-2 px-4">
+            Upload image
+           </label>
+           <span class=" text-xs text-gray-700 italic ml-4">Dimensions: 240 pixels wide</span>
           </div>
          </div>
         </div>      
@@ -379,7 +407,7 @@
                           <tr>
                            <td align="center">
                             <a href="#">
-                             <img src="/img/specialist_regular.jpg" width="192" height="auto" style="height: auto;  vertical-align: bottom;" alt="Image" class="width_100p" role="presentation" id="element_image_output_3">
+                             <img src="/img/specialist_regular.jpg" width="192" height="auto" style="height: auto;  vertical-align: bottom;" alt="Image" class="width_100p output" role="presentation" data-target="element_blog_v3_image">
                             </a>
                            </td>
                           </tr>
@@ -467,7 +495,7 @@
          <div class="flex mb-2">
           <div class="w-1/6 flex items-center">
            <h5>
-            Paragraph
+            Text
            </h5>
           </div>
           <div class="w-5/6 flex items-center">
@@ -482,6 +510,20 @@
           </div>
           <div class="w-5/6 flex items-center">
            <input placeholder="Enter some text" data-for="element_blog_v3_cta" class="text-sm border rounded-sm px-4 py-1 w-full input"/>
+          </div>
+         </div>
+         <div class="flex mb-2">
+          <div class="w-1/6 flex items-center">
+           <h5>
+            Image
+           </h5>
+          </div>
+          <div class="w-5/6 flex items-center">
+           <input type="file" data-for="element_blog_v3_image" id="element_blog_v3_image" class="input" accept="image/gif, image/jpeg, image/png" name="image" style="display: none;">
+           <label for="element_blog_v3_image" class="bg-coolblue text-white text-xs rounded py-2 px-4">
+            Upload image
+           </label>
+           <span class=" text-xs text-gray-700 italic ml-4">Dimensions: 192 pixels wide</span>
           </div>
          </div>
         </div>      
@@ -562,7 +604,7 @@
                           <tr>
                            <td align="center">
                             <a href="#">
-                             <img src="/img/specialist_regular.jpg" width="192" height="auto" style="height: auto;  vertical-align: bottom;" alt="Image" class="width_100p" role="presentation" id="element_image_output_4">
+                             <img src="/img/specialist_regular.jpg" width="192" height="auto" style="height: auto;  vertical-align: bottom;" alt="Image" class="width_100p output" role="presentation" data-target="element_blog_v4_image">
                             </a>
                            </td>
                           </tr>
@@ -601,7 +643,7 @@
          <div class="flex mb-2">
           <div class="w-1/6 flex items-center">
            <h5>
-            Paragraph
+            Text
            </h5>
           </div>
           <div class="w-5/6 flex items-center">
@@ -616,6 +658,20 @@
           </div>
           <div class="w-5/6 flex items-center">
            <input placeholder="Enter some text" data-for="element_blog_v4_cta" class="text-sm border rounded-sm px-4 py-1 w-full input"/>
+          </div>
+         </div>
+         <div class="flex mb-2">
+          <div class="w-1/6 flex items-center">
+           <h5>
+            Image
+           </h5>
+          </div>
+          <div class="w-5/6 flex items-center">
+           <input type="file" data-for="element_blog_v4_image" id="element_blog_v4_image" class="input" accept="image/gif, image/jpeg, image/png" name="image" style="display: none;">
+           <label for="element_blog_v4_image" class="bg-coolblue text-white text-xs rounded py-2 px-4">
+            Upload image
+           </label>
+           <span class=" text-xs text-gray-700 italic ml-4">Dimensions: 192 pixels wide</span>
           </div>
          </div>
         </div>      
